--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -1,7 +1,7 @@
 <div class="card card-accent-primary">
     <div class="card-header">
 
-        <h3>{{!boardId ? 'Create New' : 'Edit'}} Story Board
+        <h3>{{!boardId ? 'Create New' : 'Edit'}} Pathway
 
             <app-dropdown-actions title="Download Attached" [deleteIcon]="true" *ngIf="Object.keys(actions).length" label="Download File" [fileDownload]="true" class="op-dots" [actions]="actions" (onSelect)="downloadFile($event)" (deleteSelect)="findSelectedFile($event)"
                 (mouseleave)="toggle=false">
@@ -69,7 +69,7 @@
                     </div> -->
 
                     <label for="file-upload" class="col-form-label atch_doc">
-                        <span><i class="fas fa-paperclip paper set-cursor"></i></span> Attach Document(s):
+                         Attach Document(s): <span><i class="fas fa-paperclip paper set-cursor"></i></span>
                         </label>
                     <input #attachInput multiple type="file" accept=".jpg, .jpeg, .png, .xls, .xlsx, .pdf, .csv, .doc, .docx, .pptx, .ppt" class="upload-file-input" id="file-upload" (change)="handlerAttachFile()">
 
@@ -98,7 +98,7 @@
             <div class="form-group row subcanc-btn">
                 <div class="col-12">
                     <button type="submit" [disabled]="storyBoardForm.invalid" class="btn btn-primary" (click)="submitForm()">Submit</button>
-                    <a class="btn btn-secondary set-margin-left10" routerLink="/bid-academy/story-boards-list">Cancel</a>
+                    <a class="btn btn-secondary set-margin-left10" routerLink="/bid-academy/pathways-list">Cancel</a>
                 </div>
                 <!-- <div class="col-12" *ngIf="created">
                   <a routerLink="/users/list" class="btn btn-secondary">Back</a>
