--- a/src/app/pages/bid-academy/components/group/group-tree/group-tree.component.html
+++ b/src/app/pages/bid-academy/components/group/group-tree/group-tree.component.html
@@ -1,1 +1,1 @@
-<tree-root [focused]="true" [nodes]="nodes" [options]="options"></tree-root>
+<tree-root [focused]="true" [nodes]="nodes" [options]="options" (moveNode)="onMoveNode($event)" (treeDrop)="onDrop($event)" [treeAllowDrop]="allowDrop.bind(this)"></tree-root>
