--- a/src/app/pages/bid-academy/components/group/group-tree/group-tree.component.html
+++ b/src/app/pages/bid-academy/components/group/group-tree/group-tree.component.html
@@ -1,1 +1,2 @@
 <tree-root [focused]="true" [nodes]="nodes" [options]="options" (moveNode)="onMoveNode($event)"></tree-root>
+<button class="button button-primary" (click)="save()">Save</button>
