--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -24,8 +24,11 @@
                 <th class="set-cursor width10">
                     Edit
                 </th>
-                <th class="set-cursor width50">
+                <th class="set-cursor width20">
                     Name
+                </th>
+                <th class="set-cursor width30">
+                    Description
                 </th>
                 <th class="set-cursor text-center width10">
                     #Pathway(s)
@@ -44,6 +47,7 @@
                     <i class="fas fa-edit set-cursor" (click)="openModal(addEditGroupModal, item)" title="Edit Group"></i>
                 </td>
                 <td>{{item?.name }}</td>
+                <td>{{item?.description }}</td>
                 <td class="text-center">{{item?.story_boards_count }}</td>
                 <td class="text-center">{{item?.archive ? 'Yes' : 'No' }}</td>
                 <td class="text-center">
@@ -51,11 +55,9 @@
                     <span class="iconn"><i class="fas fa-trash set-cursor" (click)="openModal(deleteGroupModal, item)" title="Delete Permanently"></i></span>
                     <a class="iconn" [title]="item.story_users_count +  ' User(s)'" [routerLink]="['/bid-academy/story-group', item.id, 'users']"><i class="fas fa-users"></i></a>
                 </td>
-
-
             </tr>
             <tr>
-                <td colspan="5" class="transparent">
+                <td colspan="6" class="transparent">
                     <div *ngIf="groups?.length === 0" class="no-data">No Data Found!</div>
                 </td>
             </tr>
@@ -92,6 +94,16 @@
                 <div class="col-xs-12 col-sm-12 form-group">
                     <label>Sector Group Name</label>
                     <input type="text" class="form-control" formControlName="name">
+                </div>
+
+                <div class="col-xs-12 col-sm-12 form-group">
+                    <label>Description</label>
+                    <textarea rows="5" class="form-control" formControlName="description"></textarea>
+                </div>
+
+                <div class="col-xs-12 col-sm-12 form-group">
+                    <label>Make As Default</label>
+                    <input type="checkbox" class="form-control" formControlName="default">
                 </div>
             </div>
 
