--- a/src/app/pages/bid-academy/components/group/group-users-list/group-users-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-users-list/group-users-list.component.html
@@ -3,10 +3,10 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="stroy-list-head">
-                <h3>Sector Group User(s) List</h3>
+                <h3>Pathway Group User(s) List</h3>
 
                 <div class="buton-holder">
-                    <a class="create-user btn btn-primary float-right" [routerLink]="['/bid-academy/sector-groups-list']"><i class="fas fa-external-link-alt"></i>Sector Group List</a>
+                    <a class="create-user btn btn-primary float-right" [routerLink]="['/bid-academy/pathway-groups-list']"><i class="fas fa-external-link-alt"></i>Pathway Group List</a>
                 </div>
 
             </div>
@@ -58,7 +58,7 @@
                   <span aria-hidden="true">&times;</span>
               </button>
     </div>
-    <div class="modal-body"><label>Are you sure you want to Delete this User from this Sector Group?</label></div>
+    <div class="modal-body"><label>Are you sure you want to Delete this User from this Pathway Group?</label></div>
 
     <div class="row info">
         <div class="col-xs-12 col-sm-12 text-left">
