--- a/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
+++ b/src/app/pages/bid-academy/components/story-boards-list/story-boards-list.component.html
@@ -5,10 +5,10 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="stroy-list-head">
-                <h3>Pathways List</h3>
+                <h3>Documents List</h3>
                 <div class="buton-holder">
                     <!-- <label for="role" class="col-form-label">&nbsp;</label> -->
-                    <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/bid-academy/create-story-board']"><i class="fas fa-plus-square"></i>Create New Pathway</button>
+                    <button type="button" class="create-user btn btn-primary float-right" [routerLink]="['/bid-academy/create-story-board']"><i class="fas fa-plus-square"></i>Create New Document</button>
                 </div>
             </div>
         </div>
