--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -102,13 +102,28 @@
                 </div>
 
                 <div class="col-xs-12 col-sm-12 form-group">
-                    <label>Description</label>
+                    <label>Introduction</label>
                     <textarea rows="5" class="form-control" formControlName="description"></textarea>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 form-group">
                     <label>Make As Default</label>
                     <input type="checkbox" class="form-control" formControlName="default">
+                </div>
+
+                <div class="col-xs-12 col-sm-12 form-group">
+                    <label>Approach</label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="col-xs-12 col-sm-12 form-group">
+                    <label>Target Audience</label>
+                    <input type="text" class="form-control">
+                </div>
+
+                <div class="col-xs-12 col-sm-12 form-group">
+                    <label>Curriculum Overview</label>
+                    <textarea rows="6" type="text" class="form-control"></textarea>
                 </div>
             </div>
 
