--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -56,11 +56,46 @@
                         </div>
                     </div>
 
+                    <div class="title-container">
+                        <label for="objectives" class="col-form-label">Objectives: </label>
+                        <div class="">
+                            <input type="text" class="form-control" id="objectives">
+                        </div>
+                    </div>
+
+                    <div class="title-container">
+                        <label for="plan" class="col-form-label">Plan: </label>
+                        <div class="">
+                            <input type="text" class="form-control" id="plan">
+                        </div>
+                    </div>
+
+                    <div class="title-container">
+                        <label for="expected_outcomes" class="col-form-label">Expected Outcomes: </label>
+                        <div class="">
+                            <input type="text" class="form-control" id="expected_outcomes">
+                        </div>
+                    </div>
+
+                    <div class="title-container">
+                        <label for="process" class="col-form-label">Process: </label>
+                        <div class="">
+                            <input type="text" class="form-control" id="process">
+                        </div>
+                    </div>
+
+                    <div class="title-container">
+                        <label for="review" class="col-form-label">Review: </label>
+                        <div class="">
+                            <input type="text" class="form-control" id="review">
+                        </div>
+                    </div>
+
 
                 </div>
 
-                <div class="col-xs-12 col-sm-6">
-                    <label for="description" class="col-form-label">Description: </label>
+                <div class="col-xs-12 col-sm-12">
+                    <label for="description" class="col-form-label">Overview: </label>
                     <div class="">
                         <!-- <textarea rows="8" formControlName="description" class="form-control" id="description" placeholder=""></textarea> -->
 
