--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -59,38 +59,37 @@
                     <div class="title-container">
                         <label for="objectives" class="col-form-label">Objectives: </label>
                         <div class="">
-                            <input type="text" class="form-control" id="objectives">
+                            <textarea rows="8" formControlName="objectives" class="form-control" id="objectives" placeholder=""></textarea>
                         </div>
                     </div>
 
                     <div class="title-container">
                         <label for="plan" class="col-form-label">Plan: </label>
                         <div class="">
-                            <input type="text" class="form-control" id="plan">
+                            <textarea rows="8" formControlName="plan" class="form-control" id="plan" placeholder=""></textarea>
                         </div>
                     </div>
 
                     <div class="title-container">
                         <label for="expected_outcomes" class="col-form-label">Expected Outcomes: </label>
                         <div class="">
-                            <input type="text" class="form-control" id="expected_outcomes">
+                            <textarea rows="8" formControlName="expected_outcomes" class="form-control" id="expected_outcomes" placeholder=""></textarea>
                         </div>
                     </div>
 
                     <div class="title-container">
                         <label for="process" class="col-form-label">Process: </label>
                         <div class="">
-                            <input type="text" class="form-control" id="process">
+                            <textarea rows="8" formControlName="process" class="form-control" id="process" placeholder=""></textarea>
                         </div>
                     </div>
 
                     <div class="title-container">
                         <label for="review" class="col-form-label">Review: </label>
                         <div class="">
-                            <input type="text" class="form-control" id="review">
+                            <textarea rows="8" formControlName="review" class="form-control" id="review" placeholder=""></textarea>
                         </div>
                     </div>
-
 
                 </div>
 
