--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -24,12 +24,12 @@
                 <th class="set-cursor width10">
                     Edit
                 </th>
-                <th class="set-cursor width20">
+                <th class="set-cursor width40">
                     Name
                 </th>
-                <th class="set-cursor width20">
+                <!-- <th class="set-cursor width20">
                     Description
-                </th>
+                </th> -->
                 <th class="set-cursor text-center width10">
                     #Pathway(s)
                 </th>
@@ -50,7 +50,7 @@
                     <i class="fas fa-edit set-cursor" (click)="openModal(addEditGroupModal, item)" title="Edit Group"></i>
                 </td>
                 <td>{{item?.name }}</td>
-                <td>{{item?.description }}</td>
+                <!-- <td>{{item?.description }}</td> -->
                 <td class="text-center">{{item?.story_boards_count }}</td>
                 <td class="text-center">{{item?.default ? 'Yes' : 'No' }}</td>
                 <td class="text-center">{{item?.archive ? 'Yes' : 'No' }}</td>
@@ -61,7 +61,7 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="7" class="transparent">
+                <td colspan="6" class="transparent">
                     <div *ngIf="groups?.length === 0" class="no-data">No Data Found!</div>
                 </td>
             </tr>
@@ -113,17 +113,17 @@
 
                 <div class="col-xs-12 col-sm-12 form-group">
                     <label>Approach</label>
-                    <input type="text" class="form-control">
+                    <textarea rows="5" class="form-control" formControlName="approach"></textarea>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 form-group">
                     <label>Target Audience</label>
-                    <input type="text" class="form-control">
+                    <textarea rows="5" class="form-control" formControlName="target_audience"></textarea>
                 </div>
 
                 <div class="col-xs-12 col-sm-12 form-group">
                     <label>Curriculum Overview</label>
-                    <textarea rows="6" type="text" class="form-control"></textarea>
+                    <textarea rows="6" type="text" class="form-control" formControlName="curriculum_overview"></textarea>
                 </div>
             </div>
 
