--- a/src/app/pages/bid-academy/components/categories/categories-list/categories-list.component.html
+++ b/src/app/pages/bid-academy/components/categories/categories-list/categories-list.component.html
@@ -1,4 +1,4 @@
-<page-header [headerName]="'Categories List'" [buttons]="buttons" (openModal)="openModal(this[$event[0]], $event[1])"></page-header>
+<page-header [headerName]="'Pathway\'s Categories List'" [buttons]="buttons" (openModal)="openModal(this[$event[0]], $event[1])"></page-header>
 
 <div class="table-responsive padding-bottom-250">
     <table class="table table-striped">
