--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -30,6 +30,10 @@
                             <input type="text" formControlName="title" class="form-control" id="title">
                         </div>
                     </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+
 
                     <div class="group-container">
                         <label for="story_id" class="col-form-label">Select Pathway: </label>
@@ -40,6 +44,10 @@
                             </select>
                         </div>
                     </div>
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+
 
                     <div class="tags-container">
                         <label for="tags" class="col-form-label">Select Tags: </label>
@@ -55,6 +63,13 @@
 
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <div class="col-xs-12 col-sm-6">
+
 
                     <div class="title-container">
                         <label for="objectives" class="col-form-label">Objectives: </label>
@@ -63,12 +78,22 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+
+
                     <div class="title-container">
                         <label for="plan" class="col-form-label">Plan: </label>
                         <div class="">
                             <textarea rows="8" formControlName="plan" class="form-control" id="plan" placeholder=""></textarea>
                         </div>
                     </div>
+
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+
 
                     <div class="title-container">
                         <label for="expected_outcomes" class="col-form-label">Expected Outcomes: </label>
@@ -77,12 +102,22 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+
+
                     <div class="title-container">
                         <label for="process" class="col-form-label">Process: </label>
                         <div class="">
                             <textarea rows="8" formControlName="process" class="form-control" id="process" placeholder=""></textarea>
                         </div>
                     </div>
+
+                </div>
+
+                <div class="col-xs-12 col-sm-6">
+
 
                     <div class="title-container">
                         <label for="review" class="col-form-label">Review: </label>
