--- a/src/app/pages/bid-academy/components/story-board/story-board.component.html
+++ b/src/app/pages/bid-academy/components/story-board/story-board.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header">
+    <div class="card-header edit-top">
 
         <h3>{{!boardId ? 'Create New' : 'Edit'}} Document
 
@@ -170,7 +170,7 @@
                     <a class="btn btn-secondary set-margin-left10" routerLink="/bid-academy/documents-list">Cancel</a>
                 </div>
             </div> -->
-            <div class="card-header">
+            <div class="card-header story-bottom">
 
 
                 <div class="buton-holder">
