--- a/src/app/pages/documents/components/documents-list/documents-list.component.scss
+++ b/src/app/pages/documents/components/documents-list/documents-list.component.scss
@@ -93,7 +93,7 @@ input[type=checkbox], input[type=radio] {
     color: #fff;
 }
 .button-holder {
-    padding: 26px 0 0;
+    padding:0;
 }
 .button-holder .upload_btn {
     background: #d66166;
