--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -710,7 +710,7 @@ tag:not(.readonly):not(.tag--editing):focus {
     padding: 4px;
     color: #fff;
     font-weight: 600;
-    margin-left: 12px !important;
+    margin-left: 0 !important;
 }
 .archieve-modal .modal-header .close {
     font-size: 12px;
