--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,9 +40,9 @@
 .set-margin-left10 {
     margin-left: 10px;
 }
-.table-striped {
-    border: 1px solid #c0cadd;
-}
+// .table-striped {
+//     border: 1px solid #c0cadd;
+// }
 
 .email-set {
     font-size: 12px;
