--- a/src/app/pages/bid-academy/components/group/add-edit-pathway/add-edit-pathway.component.html
+++ b/src/app/pages/bid-academy/components/group/add-edit-pathway/add-edit-pathway.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header">
+    <div class="card-header card-top-heading">
 
         <h4 class="modal-title">{{groupForm.value.id ? 'Edit' : 'Create'}} Pathway Group</h4>
 
@@ -51,7 +51,7 @@
                 </div>
             </div>
 
-            <div class="card-header">
+            <div class="card-header card-bottom">
 
                 <div class="buton-holder">
 
