--- a/src/app/pages/injestors/components/injestors-list/injestors-list.component.scss
+++ b/src/app/pages/injestors/components/injestors-list/injestors-list.component.scss
@@ -3,4 +3,17 @@
     vertical-align: middle !important;
     line-height: 15px;
   }
+
+  .table {
+    display: inline-block;
+    width: 100%;
+    margin-top: 30px;
+    th{border-top: none;}
 }
+.ng2-smart-pagination-nav {
+  margin: 30px 0 0 0;
+}
+}
+
+
+
