Updated code b4 pulling

--- a/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
+++ b/src/app/pages/bid-academy/components/group/group-list/group-list.component.html
@@ -6,7 +6,7 @@
                 <h3>Pathway List</h3>
                 <div class="buton-holder">
                     <!-- <label for="role" class="col-form-label">&nbsp;</label> -->
-                    <button type="button" class="create-user btn btn-primary float-right set-margin-left10" routerLink="/bid-academy/create-pathway"><i class="fas fa-plus-square"></i>Create New Pathway Group</button>
+                    <button type="button" class="create-user btn btn-primary float-right set-margin-left10" routerLink="/bid-academy/create-pathway"><i class="fas fa-plus-square"></i>Create New Pathway</button>
                     <button type="button" class="create-user btn btn-primary float-right" (click)="openModal(includeUsers, undefined)"><i class="fas fa-plus-square"></i>Include Users</button>
                 </div>
             </div>
